backtest_26stocks.log
  File "/Users/zhaoxf/.openclaw/skills/港股量化投资/scripts/multi_period_backtest.py", line 228
    print(f'{'='*80}')
              ^
SyntaxError: f-string: expecting '}'
